syntax = "proto3";
package stafiprotocol.stafihub.relayers;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/stafihub/stafihub/x/relayers/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a list of relayersByDenom items.
	rpc RelayersByDenom(QueryRelayersByDenomRequest) returns (QueryRelayersByDenomResponse) {
		option (google.api.http).get = "/stafiprotocol/stafihub/relayers/{denom}";
	}

    // Queries a threshold by denom.
	rpc Threshold(QueryGetThresholdRequest) returns (QueryGetThresholdResponse) {
		option (google.api.http).get = "/stafiprotocol/stafihub/relayers/threshold/{denom}";
	}
// this line is used by starport scaffolding # 2
}

message QueryRelayersByDenomRequest {
    string denom = 1;
}

message QueryRelayersByDenomResponse {
    repeated string relayers = 1 [(gogoproto.nullable) = false];
}

message QueryGetThresholdRequest {
	  string denom = 1;
}

message QueryGetThresholdResponse {
	uint32 threshold = 1;
}
// this line is used by starport scaffolding # 3
